--- a/MULTIVARIATE_LINEAR_REGRESSION.ipynb
+++ b/MULTIVARIATE_LINEAR_REGRESSION.ipynb
@@ -96,7 +96,6 @@
     "\n",
     "# train: init\n",
     "W = np.zeros((n+1,1))\n",
-    "\n",
     "#n+1 because we are considering b as theta0\n",
     "\n",
     "#b not fixed \n",
@@ -106,6 +105,7 @@
     "mx=np.max(y)\n",
     "mn=np.min(y)\n",
     "y=(y-mn)/(mx-mn)\n",
+    "#normalizing y for accuarte model",
     "learning_rate = 0.01\n",
     "epochs = 10000\n",
     " \n",
@@ -166,6 +166,7 @@
     "mx=np.max(y)\n",
     "mn=np.min(y)\n",
     "y=(y-mn)/(mx-mn)\n",
+    "# normalizing y for accurate prediction,
     "\n",
     "\n",
     "ydash=predict_value(X,W)\n",
