--- a/MULTIVARIATE_LINEAR_REGRESSION.ipynb
+++ b/MULTIVARIATE_LINEAR_REGRESSION.ipynb
@@ -105,7 +105,7 @@
     "mx=np.max(y)\n",
     "mn=np.min(y)\n",
     "y=(y-mn)/(mx-mn)\n",
-    "#normalizing y for accuarte model",
+    "#normalizing y for accuarte model\n",
     "learning_rate = 0.01\n",
     "epochs = 10000\n",
     " \n",
@@ -166,7 +166,7 @@
     "mx=np.max(y)\n",
     "mn=np.min(y)\n",
     "y=(y-mn)/(mx-mn)\n",
-    "# normalizing y for accurate prediction,
+    "# normalizing y for accurate prediction\n",
     "\n",
     "\n",
     "ydash=predict_value(X,W)\n",
